package clases;

public enum Tipo {
    MINIBUS,
    ESTANDAR,
    DLOBEPISO
}
